--- a/html/scss/main.scss
+++ b/html/scss/main.scss
@@ -1,34 +1,16 @@
-html{
-    background-color: #191919;
-    body{
-        background-color: #191919;
-    }
-}
-
-#header{
-    width: 100%;
-    background-color: #000;
-    .headerContainer{
-        width: 1920px;
-        margin: 0 auto;
-        h1{
-            a{
-                img{}
-            }
-        }
-        nav{
-            .navDepth01{
+main{
+    transform: translateY(-60px); // 헤더와 top: 0;을 맞춤
+    #container{
+        width: 100%;
+        #mainBannerBox{
+            width: 100%;
+            .mainBanner{
                 li{
-                    a{
-                        color: #fff;
-                    }
-                    .navDepth02{
-                        li{
-                            a{
-                                color: #fff;
-                            }
-                        }
-                    }
+                    width: 1280px;
+                    height: 700px;
+                    margin: 0 auto;
+                    background-color: #f1f1f5;
+                    a{}
                 }
             }
         }
