--- a/html/layout/footer.html
+++ b/html/layout/footer.html
@@ -1,3 +1,6 @@
 <footer></footer>
+
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script> <!--Swiper JS CDN-->
+<script src="/js/main.js"></script>
 </body>
 </html>
