--- a/html/scss/main.scss
+++ b/html/scss/main.scss
@@ -1,16 +1,104 @@
 main{
     transform: translateY(-60px); // 헤더와 top: 0;을 맞춤
-    #container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 100px;
+    #mainBannerBox{
         width: 100%;
-        #mainBannerBox{
+        max-width: 1920px;
+        height: 700px;
+        #mainBanner.swiper{
             width: 100%;
-            .mainBanner{
+            height: 100%;
+            overflow: hidden;
+            .swiper-slide{
+                a{
+                    img{
+                        display: block;
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                }
+            }
+        }
+    }
+    #movieRankBox{
+        position: relative;
+        width: 1280px;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        gap: 80px;
+        > div{
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            > ul{
+                display: flex;
+                gap: 10px;
                 li{
-                    width: 1280px;
-                    height: 700px;
-                    margin: 0 auto;
-                    background-color: #f1f1f5;
-                    a{}
+                    h2{
+                        text-align: center;
+                        width: 120px;
+                        line-height: 34px;
+                        padding: 0 14px;
+                        border-radius: 28px;
+                        box-sizing: border-box;
+                        /* background-color: #333; */
+                        color: #969696;
+                        font-size: 1rem;
+                        font-weight: 500;
+                    }
+                }
+            }
+        }
+        .movieRank01{
+            #nowMovieRankContents{
+                .swiper{
+                    width: 100%;
+                    height: 300px;
+                    margin: 20px auto;
+                    .swiper-wrapper{
+                        display: flex;
+                        gap: 30px;
+                        .swiper-slide{
+                            width: 232px;
+                            height: 330px;
+                            border-radius: 10px;
+                            background-color: #f1f1f5;
+                            overflow: hidden;
+                            a{
+                                img{}
+                                span{}
+                            }
+                        }
+                    }
+                    .swiper-pagination{}
+                    .swiper-button-next{}
+                    .swiper-button-prev{}
+                }
+            }
+        }
+    }
+    #middleBannerBox{
+        width: 100%;
+        max-width: 1920px;
+        height: 140px;
+        #middleBanner.swiper.mySwiper{
+            width: 100%;
+            height: 100%;
+            .swiper-wrapper{
+                .swiper-slide{
+                    a{
+                        img{
+                            display: block;
+                            width: 100%;
+                            height: 100%;
+                            object-fit: cover;
+                        }
+                    }
                 }
             }
         }
