--- a/html/scss/main.scss
+++ b/html/scss/main.scss
@@ -1,9 +1,17 @@
+@mixin contentTitle{
+    line-height: 34px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: #fff;
+}
+
 main{
     transform: translateY(-60px); // 헤더와 top: 0;을 맞춤
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 100px;
+    gap: 140px;
+    padding-bottom: 140px;
     #mainBannerBox{
         width: 100%;
         max-width: 1920px;
@@ -25,7 +33,6 @@ main{
         }
     }
     #movieRankBox{
-        position: relative;
         width: 1280px;
         margin: 0 auto;
         display: flex;
@@ -34,7 +41,7 @@ main{
         > div{
             display: flex;
             flex-direction: column;
-            gap: 20px;
+            gap: 30px;
             > ul{
                 display: flex;
                 gap: 10px;
@@ -99,6 +106,112 @@ main{
                             object-fit: cover;
                         }
                     }
+                }
+            }
+        }
+    }
+    #eventPreviewBox{
+        width: 1280px;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        gap: 80px;
+        article{
+            display: flex;
+            flex-direction: column;
+            gap: 30px;
+            h2{
+                @include contentTitle;
+            }
+        }
+        #eventBox{
+            .eventImgList{
+                position: relative;
+                width: 640px;
+                height: 330px;
+                border: solid 1px #fff 20%;
+                border-radius: 14px;
+                box-sizing: border-box;
+                overflow: hidden;
+                li{
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    top: 0;
+                    left: 0;
+                    background-color: #969696;
+                }
+            }
+        }
+        #previewBox{
+            #previewList{
+                display: flex;
+                gap: 16px;
+                div{
+                    width: 416px;
+                    height: 228px;
+                    border-radius: 14px;
+                    border: solid 1px #fff;
+                    box-sizing: border-box;
+                }
+            }
+        }
+    }
+    #bottomBannerBox{
+        width: 100%;
+        max-width: 1920px;
+        height: 140px;
+        #bottomBanner.swiper.mySwiper{
+            width: 100%;
+            height: 100%;
+            .swiper-wrapper{
+                .swiper-slide{
+                    a{
+                        img{
+                            display: block;
+                            width: 100%;
+                            height: 100%;
+                            object-fit: cover;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    #noticeReviewBox{
+        width: 1280px;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        gap: 80px;
+        article{
+            display: flex;
+            flex-direction: column;
+            gap: 30px;
+            h2{
+                @include contentTitle;
+            }
+        }
+        #noticeBox{
+            ul{
+                width: 100%;
+                height: 380px;
+                border-radius: 14px;
+                border: solid 1px #fff;
+                box-sizing: border-box;
+                li{}
+            }
+        }
+        #reviewBox{
+            #reviewList{
+                display: flex;
+                gap: 16px;
+                div{
+                    width: 416px;
+                    height: 228px;
+                    border-radius: 14px;
+                    border: solid 1px #fff;
+                    box-sizing: border-box;
                 }
             }
         }
