--- a/html/layout/header.html
+++ b/html/layout/header.html
@@ -18,6 +18,12 @@
     <link rel="stylesheet" href="/scss/header.min.css?var=<?php echo time(); ?>">
     <link rel="stylesheet" href="/scss/main.min.css?var=<?php echo time(); ?>">
     <link rel="stylesheet" href="/scss/footer.min.css?var=<?php echo time(); ?>">
+    <style>
+        /* Noto Sans KR 구글 폰트 */
+        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
+        /* Robot 구글 폰트 */
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,700&display=swap');
+    </style>
 </head>
 <body>
     <div class="topBanner">
