--- a/html/layout/footer.html
+++ b/html/layout/footer.html
@@ -77,6 +77,7 @@
     </div>
 </footer>
 
+<script src="/js/jquery-3.7.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script> <!--Swiper JS CDN-->
 <script src="/js/header.js"></script>
 <script src="/js/main.js"></script>
