--- a/html/scss/main.scss
+++ b/html/scss/main.scss
@@ -77,7 +77,7 @@ main{
                 display: flex;
                 gap: 10px;
                 li{
-                    h2{
+                    button{
                         text-align: center;
                         width: 120px;
                         line-height: 34px;
@@ -93,7 +93,7 @@ main{
             }
         }
         .movieRank{
-            #nowMovieRank{
+            .swiper.mySwiper{
                 width: 100%;
                 height: 100%;
                 margin: 20px auto;
